# Theater.Formatierung

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ENGINE_SPEC.md  README.md  ROADMAP.md  build_backend.py  pyproject.toml
.github/workflows/: tests.yml
docs/: document_model_and_style_engine.md
docs/architecture/: render_validation.md  renderer.md
src/: classifier.py  cli.py  document_model.py  document_model_builder.py  document_model_types.py  document_spans.py  formatting_plan.py  formatting_plan_builder.py  formatting_plan_models.py  models.py  pipeline.py  report.py  speaker_parser.py  style_engine.py  style_loader.py  style_models.py  verifier.py
src/renderer/: __init__.py  docx_access.py  paragraph_renderer.py  render_context.py  run_formatter.py  word_renderer.py
src/validation/: __init__.py  rendering_validator.py  validation_errors.py
styles/: classic.yaml  minimal.yaml  theater.yaml
tests/: test_classifier.py  test_cli.py  test_document_model.py  test_e2e_example_docx.py  test_formatting_report.py  test_packaging.py  test_pipeline.py  test_rendering_validator.py  test_speaker_parser.py  test_style_loader.py  test_verifier.py  test_word_renderer.py
tests/golden/: __init__.py  corpus.py  test_golden_corpus.py
